# nbcc-loadings

./: README.md  pyproject.toml
.github/workflows/: test.yml
nbcc_loading/: __init__.py  loading_data.py  seismic.py  snow.py  wind.py
nbcc_loading/data/: snow-2015.pickle  snow-2020.pkl  wind-2015.pkl  wind-2020.pkl
tests/: test_loading_data.py  test_snow.py  test_wind.py
